--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "html2canvas": "^1.4.1",
     "jodit-react": "^5.2.15",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.553.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
